# frontier-engineering-harness

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml
.github/workflows/: ci.yml  materialize-swe-bench.yml
benchmark/: EXPERIMENT_SPEC.md  README.md  RUNNER.md  TASK_SPEC.md  __init__.py  routing-trace.schema.json  run-result.schema.json  task-schema.yaml  task.schema.json  validate_tasks.py
benchmark/datasets/swe-bench-verified/: README.md  selection.yaml
benchmark/examples/: experiment-mvp.yaml  routing-trace-direct.yaml
benchmark/examples/invalid/: direct-with-skill.yaml  missing-required-field.yaml
benchmark/examples/valid/: difficult-bug.yaml  direct-change.yaml
benchmark/fixtures/risk-alert-service/: CANDIDATE_TASKS.md  README.md  pyproject.toml
benchmark/fixtures/risk-alert-service/risk_alert_service/: __init__.py  models.py  ports.py  repositories.py  rules.py  services.py
benchmark/fixtures/risk-alert-service/tests/: test_cases.py  test_screening.py
benchmark/importers/: SWE_BENCH.md  __init__.py  swe_bench.py  swe_bench_snapshot.py
benchmark/runner/: __init__.py  cli.py  runner.py
benchmark/tasks/authored/risk-alert-service/: README.md  ambiguous-feature.yaml  difficult-bug.yaml  (+2 more)
docs/adr/: 0001-project-architecture.md  0002-separate-task-performance-from-intervention-utility.md
harness/: README.md
harness/skills/: README.md  SKILL_SPEC.md  skill.schema.json
openspec/: README.md
tests/: test_authored_tasks.py  test_benchmark_runner.py  test_swe_bench_importer.py  test_swe_bench_snapshot.py  test_task_validation.py
(+1 files in other folders)
