[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "frontier-engineering-harness"
version = "0.1.0"
description = "A lightweight engineering harness and benchmark for frontier coding agents."
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.21",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
feh-validate-tasks = "benchmark.validate_tasks:main"
feh-run-task = "benchmark.runner.cli:main"
feh-import-swe-bench = "benchmark.importers.swe_bench:main"

[tool.setuptools.packages.find]
include = ["benchmark*"]
exclude = ["harness*", "openspec*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
